@@ -40,11 +40,11 @@ require('scripts/zapper')
 require('scripts/minimap')
 require('scripts/itemcount')
 require('scripts/renamer')
-require('scripts/wiretool')
 require('scripts/pastesettings')
 require('scripts/flashlight')
 require('scripts/helmod')
 require('scripts/playerdeath')
+require('scripts/wiretools')
 
 require('scripts/blueprinter')
 require('scripts/bpmirror')
