@@ -10,3 +10,4 @@ require('prototypes/blueprinter')
 require('prototypes/tools')
 require('prototypes/renamer')
 require('prototypes/zapper')
+require('prototypes/wiretools')
