@@ -3,7 +3,6 @@ picker-crafter=Try and craft the selected entity
 picker-make-ghost=Create Simple blueprint
 picker-select=Pipette Saftisfy Requests
 picker-rename=Pipette Rename entity
-picker-wire-cutter=Remove all wires
 picker-wire-picker=Get next wire
 picker-flashlight-toggle=Toggle Flashlight
 picker-inventory-editor=Open item inventory
