@@ -46,17 +46,21 @@ disabled_tech=__1__ (Disabled)
 
 [wiretool]
 no-wires-found=No wires found in inventory.
-all-wires-removed=All connected wires removed.
+copper-removed=Removed all copper wires.
+network-removed=Removed all circuit network wires.
+must-be-admin=You must be an admin to use this tool.
 
 [item-name]
 picker-tape-measure=Tape Measure
 picker-ore-eraser=Ore Eraser
 picker-camera=Screenshot Camera
+picker-wire-cutter=Wire Cutter
 
 [item-description]
 picker-tape-measure=A tool for quickly measuring areas.
 picker-ore-eraser=Counts ores in the selected area, use SHIFT to Remove the selected ores from the world. Drop it on the ground to destroy it.
 picker-camera=Takes a screenshot of selection area. Use SHIFT to display "alt-info". File available in the script output folder.
+picker-wire-cutter=Remove all copper wires from the selected entities, [ALT] remove all network wires from the selected entities.
 
 [entity-name]
 picker-proxy-chest=Picker proxy chest
