@@ -21,6 +21,8 @@ picker-tool-tape-measure=Enable tape measure tool
 picker-tool-ore-eraser=Enable ore eraser tool
 picker-tool-camera=Enable screenshot camera tool
 picker-tool-bp-updater=Enable blueprint updater
+picker-tool-wire-cutter=Enable wire cutter
+picker-wire-cutter-admin=Admin only for wire cutter
 
 [mod-setting-description]
 picker-item-zapper=Space seperated list of item names that will be zapped into the nether when dropping them with __CONTROL__drop-cursor__ key.
@@ -45,4 +47,6 @@ picker-simple-blueprint=Create a quick blueprint of an entity with __CONTROL__pi
 picker-tool-tape-measure=Enable tape measure tool.
 picker-tool-ore-eraser=Enable ore eraser tool.
 picker-tool-camera=Enable screenshot camera tool.
-picker-tool-bp-updater=Enable blueprint updater.
+picker-tool-bp-updater=Enable blueprint updater tool.
+picker-tool-wire-cutter=Enable wire cutter tool.
+picker-wire-cutter-admin=Only admins can use the wire cutter tool
